# gitcop

./: Cargo.toml
.github/workflows/: rust.yml
src/: cmd.rs  config.rs  git.rs  lib.rs  main.rs  print.rs
src/cmd/: common.rs  list.rs  pull.rs  sync.rs
src/config/: internal.rs  types.rs
