[package]
name = "gitcop"
version = "0.2.1"
authors = ["Iku Iwasa <iku.iwasa@gmail.com>"]
edition = "2018"

[dependencies]
clap = "^2.33.0"
failure = "^0.1.5"
futures = "^0.3.4"
indexmap = { version = "^1.0.2", features = ["serde-1"] }
lazy_static = "^1.3.0"
regex = "^1.1.6"
serde = { version = "^1.0.90", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "process", "rt-core", "sync"] }
toml = "^0.5.0"
yansi = "^0.5.0"
