[package]
name = "gitcop"
version = "0.3.0"
authors = ["Iku Iwasa <iku.iwasa@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.32"
clap = "^2.33.0"
futures = "^0.3.4"
indexmap = { version = "^1.0.2", features = ["serde-1"] }
lazy_static = "^1.3.0"
regex = "^1.1.6"
serde = { version = "^1.0.90", features = ["derive"] }
thiserror = "^1.0.20"
tokio = { version = "^1.0.1", features = ["macros", "process", "rt", "rt-multi-thread", "sync"] }
toml = "^0.5.0"
yansi = "^0.5.0"
