[package]
name = "gitcop"
version = "0.4.0"
authors = ["Iku Iwasa <iku.iwasa@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.32"
clap = { version = "4.1.1", features = ["cargo"] }
futures = "0.3.4"
indexmap = { version = "1.0.2", features = ["serde-1"] }
lazy_static = "1.3.0"
regex = "1.1.6"
serde = { version = "1.0.90", features = ["derive"] }
thiserror = "1.0.20"
tokio = { version = "1.0.1", features = ["macros", "process", "rt", "rt-multi-thread", "sync"] }
toml = "0.7.3"
yansi = "0.5.0"
